--- a/DS_Boston_Housing_Dataset.ipynb
+++ b/DS_Boston_Housing_Dataset.ipynb
@@ -6,7 +6,7 @@
    "source": [
     " # Boston Housing Dataset\n",
     " \n",
-    " The data set used in this project is the \"Boston Housing Dataet\" from the US Census data concerning houses invarious areas around the city of Boston.\n",
+    " The data set used in this project is the \"Boston Housing Dataset\" from the US Census data concerning houses in various areas around the city of Boston.\n",
     "\n",
     "Each sample corresponds to a unique area and has about a dozen different attributes.\n",
     "\n",
